# rstt

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  paper.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml  request-for-model.yaml
.github/workflows/: examples.yaml  pytest.yaml  ruff.yaml
docs/: conf.py  index.rst  install.rst  modules.rst  requirements.txt  rstt.game.rst  rstt.player.rst  rstt.ranking.inferer.rst  rstt.ranking.observer.rst  rstt.ranking.rst  rstt.ranking.standard.rst  rstt.rst  rstt.scheduler.matchmaking.rst  rstt.scheduler.rst  rstt.scheduler.tournament.rst  rstt.solver.rst  rstt.utils.rst  tutorials.rst  usage.rst
docs/tutorials/: 1_Basics.md  1_Basics.rst  2_Integration.md  2_Integration.rst  3_ELo_Convergence.md  basic.rst  elo.rst  integration.rst
examples/: basic.py  btranking.py  cup_editions.py  first_simulation.py  matching.py  rerank.py  seb_edition.py  seedings.py  snake_edition.py
notes/: ranking_notes.py  standing_nots.py
rstt/: __init__.py  config.py  stypes.py
rstt/game/: __init__.py  match.py
rstt/new_ranking/: __init__.py
rstt/player/: __init__.py  basicplayer.py  historyplayer.py  player.py  playerTVS.py
rstt/ranking/: __init__.py  datamodel.py  inferer.py  observer.py  ranking.py  rating.py  standard.py  standing.py
rstt/scheduler/: __init__.py  scheduler.py
rstt/solver/: __init__.py  solvers.py
rstt/utils/: competition.py  matching.py  (+1 more)
tests/: test_duel.py  test_player.py  test_standing.py
tutorials/: EloRatingBernoulliModel.ipynb
(+108 files in other folders)
