[project]
name = "rstt"
version = "0.1.0"
description = ""
authors = [
    {name = "Bucher David", email = "davidbucherdev@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typeguard (>=4.4.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
